<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerInside"
        android:src="@drawable/background_home"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent"
        ads:layout_constraintBottom_toTopOf="@+id/adView"/>

    <Button
        android:id="@+id/play_button"
        android:text="@string/home_button_play"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/button"
        android:layout_marginBottom="30dp"
        style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        ads:layout_constraintBottom_toTopOf="@id/adView" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/admob_banner_id_debug">

    </com.google.android.gms.ads.AdView>

</android.support.constraint.ConstraintLayout>