<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    android:background="@drawable/background_banner"
    app:cardBackgroundColor="@color/floral_white"
    app:cardPreventCornerOverlap="true"
    app:cardElevation="@dimen/cardview_default_elevation"
    android:padding="1dp"
    app:cardCornerRadius="@dimen/cardview_default_radius">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/title_promotion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            style="@style/TextTitle.Large"
            android:textColor="@color/textColorPrimary"
            android:gravity="center"
            android:text="@string/dummy_title"
            android:background="@drawable/background_banner"/>

        <ImageView
            android:id="@+id/image_promotion"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:visibility="gone"
            android:scaleType="centerCrop"
            android:padding="1dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/background_header_dialog"
            android:contentDescription="@string/title_promotions"/>

        <TextView
            android:id="@+id/content_promotion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:background="@drawable/background_banner"
            style="@style/TextSmall"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/dummy_content"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</android.support.v7.widget.CardView>
