<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/base"
    android:background="@color/windowBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/loading_indicator"
        android:visibility="gone"
        android:alpha="1.0"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/nenek_icon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_launcher_foreground"
            android:contentDescription="@string/app_name"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/no_connection"
        android:visibility="gone"
        android:background="@color/solitude"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                style="@style/TextTitle.Large"
                android:text="@string/no_connection_title"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/cloud"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:lottie_fileName="cloud_disconnection.json"
                    app:lottie_loop="true"
                    app:lottie_autoPlay="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_connection_content"
                    android:gravity="center"
                    style="@style/TextSmall"
                    android:padding="10dp"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/no_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/solitude">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                style="@style/TextTitle.Large"
                android:text="@string/no_content_title"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/content_not_available"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:lottie_fileName="empty_list.json"
                    app:lottie_loop="true"
                    app:lottie_autoPlay="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_content_content"
                    android:gravity="center"
                    style="@style/TextSmall"
                    android:padding="10dp"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/base_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>