<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorButtonNormal">

    <TextView
        android:id="@+id/end_game"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:text="@string/end_game_text"
        android:textStyle="bold"
        android:textColor="@color/pinkDark"
        android:gravity="center"
        style="@style/TextAppearance.AppCompat.Large"/>

    <TextView
        android:id="@+id/counter"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/dummy_zero"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:textSize="30sp"
        style="@style/TextTitle" />

    <TextView
        android:id="@+id/answer_counter"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/dummy_zero"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:textSize="14sp"
        android:textColor="@color/magenda"
        style="@style/TextTitle" />

    <LinearLayout
        android:id="@+id/container_game"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp">

            <ImageView
                android:id="@+id/answer_correct"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/answer_correct"
                android:scaleX="2"
                android:scaleY="2"
                android:translationY="30dp"
                android:translationX="10dp"
                android:contentDescription="@string/correct"/>

            <ImageView
                android:id="@+id/answer_incorrect"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/answer_incorrect"
                android:scaleX="2"
                android:scaleY="2"
                android:translationY="30dp"
                android:translationX="15dp"
                android:contentDescription="@string/incorrect"/>

            <androidx.cardview.widget.CardView
                android:visibility="visible"
                android:id="@+id/question_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="@dimen/cardview_default_radius"
                app:cardElevation="@dimen/cardview_default_elevation"
                app:cardBackgroundColor="@android:color/white">

                <TextView
                    android:id="@+id/question"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/dummy_question"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:gravity="center"/>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/answers"
            style="@style/recycler_view"
            android:layout_height="0dp"
            android:layout_weight="6"
            app:layoutManager="LinearLayoutManager"
            tools:listitem="@layout/row_answers"
            tools:itemCount="4"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/footer_game"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
