<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    app:cardPreventCornerOverlap="true"
    app:cardCornerRadius="@dimen/cardview_default_radius"
    app:cardElevation="@dimen/cardview_default_elevation"
    app:cardUseCompatPadding="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/container_username_place"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            app:layout_constraintLeft_toRightOf="@id/image"
            app:layout_constraintRight_toLeftOf="@id/points"
            android:id="@+id/container_username_place"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/dummy_username"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:maxLines="1"
                android:lines="1"
                android:singleLine="true"
                style="@style/TextMedium"
                android:textColor="@color/textColorPrimary"
                android:gravity="center_vertical" />

            <TextView
                android:id="@+id/place"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/dummy_place"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:maxLines="1"
                android:lines="1"
                android:singleLine="true"
                style="@style/TextSmall"
                android:gravity="center_vertical"/>

        </LinearLayout>

        <TextView
            app:layout_constraintLeft_toRightOf="@+id/container_username_place"
            app:layout_constraintRight_toRightOf="@id/medal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/points"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:text="@string/dummy_points"
            style="@style/TextSmall"
            android:gravity="center"
            tools:ignore="NestedWeights" />

        <ImageView
            app:layout_constraintLeft_toRightOf="@id/points"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/medal"
            android:layout_width="30dp"
            android:padding="2dp"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:src="@drawable/nenek_medal"
            android:contentDescription="@string/app_name" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
