<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/background_profile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/com_facebook_profile_picture_blank_square"
            android:contentDescription="@string/app_name"/>

    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@color/drawerBackground"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:cardElevation="@dimen/cardview_default_elevation"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="20">

            <TextView
                android:id="@+id/profile_username"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                style="@style/TextHeader"
                android:gravity="center"
                android:text="@string/dummy_username"/>

            <TextView
                android:id="@+id/profile_mail"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                style="@style/TextMedium"
                android:gravity="center"
                android:text="@string/dummy_mail"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:gravity="center"
                android:weightSum="2"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights,UseCompoundDrawables">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/medals"
                        android:contentDescription="@string/app_name" />

                    <TextView
                        android:id="@+id/profile_points"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingLeft="10dp"
                        android:paddingStart="10dp"
                        android:paddingRight="0dp"
                        android:paddingEnd="0dp"
                        style="@style/TextSmall"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:text="@string/dummy_points" />

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:background="@color/divider"
                    android:layout_height="match_parent"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/trophy"
                        android:contentDescription="@string/app_name" />

                    <TextView
                        android:id="@+id/profile_place"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingLeft="10dp"
                        android:paddingStart="10dp"
                        android:paddingRight="0dp"
                        android:paddingEnd="0dp"
                        style="@style/TextSmall"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:text="@string/dummy_place" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
